--- a/responsive-images-lab/app/styles/main.css
+++ b/responsive-images-lab/app/styles/main.css
@@ -32,11 +32,21 @@ body {
   text-align: center;
 }
 
-/* TODO 2 - set the image max-width */
+img {
+  max-width: 100%;
+}
 
-/* TODO 4.1 - display the SFO image at 50vw */
+img#sfo {
+  transition: width 0.5s;
+  max-width: 50vw;
+}
 
-/* TODO 5.1 - add a media query */
+@media screen and (max-width: 700px) {
+  img#sfo {
+    max-width: 90vw;
+    width: 90vw;
+  }
+}
 
 figcaption {
   color: #bb021e;
